<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/xml_Main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg11"
    android:orientation="vertical"
    android:padding="4dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/lnSupport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <com.capricorn.RayMenu
                android:id="@+id/ray_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvTimeCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/strCPTT60s"
                android:textColor="#ff0000"
                android:textSize="25sp" />

            <ProgressBar
                android:id="@+id/mProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/tim2"
                android:progress="100"
                android:progressDrawable="@drawable/progressbar2"
                android:rotation="-180" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/hong"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/strCPTTcauhoi"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#dfff"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btQuestionA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:drawableLeft="@drawable/bt_caua"
            android:gravity="left|center"
            android:padding="4dp"
            android:text="@string/strCPTT_a"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btQuestionB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:drawableLeft="@drawable/bt_caub"
            android:gravity="left|center"
            android:padding="4dp"
            android:text="@string/strCPTT_b"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btQuestionC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:drawableLeft="@drawable/bt_cauc"
            android:gravity="left|center"
            android:padding="4dp"
            android:text="@string/strCPTT_c"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btQuestionD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:drawableLeft="@drawable/bt_caud"
            android:gravity="left|center"
            android:padding="4dp"
            android:text="@string/strCPTT_d"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/xxx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <RelativeLayout
            android:id="@+id/rlMoneyAndScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="2" >

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:contentDescription="@string/strCPTTTacGia"
                        android:src="@drawable/ic_diem" />

                    <TextView
                        android:id="@+id/tvScore"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Điểm: 0"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#ff0000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="2" >

                    <TextView
                        android:id="@+id/tvNumOfMoney"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Tiền:\n50"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#ff0000" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:contentDescription="@string/strCPTTTacGia"
                        android:src="@drawable/ic_tien" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/flWrong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/xanhdatroi2"
        android:visibility="invisible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:weightSum="5" >

                <ImageView
                    android:id="@+id/flWrong_ivWrong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:contentDescription="@string/strCPTTTacGia"
                    android:src="@drawable/buon10" />

                <TextView
                    android:id="@+id/flWrong_tvLose"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/strCPTTThuaRoi"
                    android:textColor="#ff0000"
                    android:textSize="40sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/flWrong_tvResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/strCPTTKQ"
                android:textColor="#dfff"
                android:textSize="25sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/flWrong_tvScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/strCPTTDiemSo"
                android:textColor="#00ff00"
                android:textSize="31sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/flWrong_tvHightScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/strCPTTKyLuc1"
                android:textColor="#00ff00"
                android:textSize="31sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/flWrong_addMoney"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/strCPTTTienThuong"
                android:textColor="#00ff00"
                android:textSize="31sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/flWrong_btReplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/nutxanhlacay"
                    android:drawableTop="@drawable/ic_action_good"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="@string/strCPTTChoiLai"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#dfff"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/flWrong_btExit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/nut_do"
                    android:drawableTop="@drawable/ic_action_bad"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="@string/strCPTTThoat"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#dfff"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/flRight"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:visibility="invisible" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="@drawable/cam"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/flRight_ivRight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:contentDescription="@string/strCPTTTacGia"
                    android:src="@drawable/vui10" />

                <TextView
                    android:id="@+id/flRight_tvRight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/strCPTTTraLoiChinhXac"
                    android:textColor="#dfff"
                    android:textSize="35sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/flRight_tvShowInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/do2"
                android:gravity="center"
                android:text="@string/strCPTTChamDeTiepTuc"
                android:textColor="#dfff"
                android:textSize="36sp" />
        </RelativeLayout>
    </FrameLayout>

</RelativeLayout>