<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:background="@drawable/bg_main"
    android:orientation="vertical"
    android:padding="9dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strNhapTieuDeChoBaiBao"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#dfff"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/strNhapTieuDeChoBaiBao" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strDuongDan"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#dfff"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none" />

        <Button
            android:id="@+id/btOkay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/nutxanhlacay"
            android:gravity="center"
            android:text="@string/strXacNhanTai"
            android:textColor="#dfff"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>